Removed grid and fixed product spacing with flexbox, edited CSS

--- a/src/category.css
+++ b/src/category.css
@@ -70,8 +70,8 @@ nav {
   padding-top: 30px;
 }
 
-.sidebar {
-  padding: 7px 28px;
+.sidebar-searchInput {
+  padding: 6px 33px;
   font-size: 1rem;
   box-shadow: none;
   border-radius: 0;
@@ -84,7 +84,7 @@ nav {
   transition: all 0.2s linear;
   border: 1px solid #e2e2e2;
   outline: none;
-  font-weight: 400;
+  font-weight: lighter;
   vertical-align: baseline;
   margin: 0;
 }
@@ -92,7 +92,7 @@ nav {
 ::-webkit-input-placeholder {
   text-align: left;
   position: relative;
-  left: -10px;
+  left: -24px;
 }
 
 .product-search-btn {
@@ -211,6 +211,10 @@ input[type="range"] {
   }
 }
 
+.widget-area {
+  padding-right: 30px;
+}
+
 .wrap {
   display: flex;
   align-items: center;
@@ -225,48 +229,75 @@ input[type="range"] {
 
 .content-area {
   background: #fff;
+  padding-left: 50px;
 }
 
 .content-top {
   display: flex;
   justify-content: space-between;
+  padding: 0 100px 0 45px;
 }
 
-.product-columns {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  gap: 10px;
-  list-style: none outside;
-  clear: both;
-}
-
-.grid-columns {
-  text-align: left;
+#product1 .pro-container {
   display: flex;
-  flex-direction: column;
-  padding: 0;
-  position: relative;
-  border-bottom: 0;
-  margin: 0;
-  min-height: 1px;
-  border: 0;
-  background-color: #ffffff;
-  background-image: none;
-  outline: 0;
-  vertical-align: baseline;
+  flex-wrap: wrap;
+  padding-top: 20px;
 }
 
+#product1 .pro {
+  width: 10%;
+  min-width: 250px;
+  padding: 10px 12px;
+  padding-right: 10px;
+  border: 0 solid #cce7d8;
+  cursor: pointer;
+  margin: 0;
+  transition: 0.2;
+}
+
+#product1 .pro img {
+  width: 100%;
+  margin-bottom: 0.8em;
+}
+
+#product1 .pro .des {
+  font-size: 1em;
+  margin-bottom: 0.5em;
+  text-align: start;
+  padding: 0px 0px 0px 0px;
+}
+
+#product1 .pro .des span {
+  color: #606063;
+  font-size: 12px;
+  margin-top: 0.5em;
+  margin-bottom: 0.8em;
+}
+
+#product1 .pro .des h5 {
+  color: #1a1a1a;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+#product1 .pro .des i {
+  font-size: 12px;
+}
+
+#product1 .pro .des h4 {
+  font-weight: 500;
+}
 .site-container {
   display: flex;
-  margin-top: 60px;
+  margin-top: 65px;
 }
 
 .secondary-container {
-  margin-left: 70px;
+  margin-left: 68px;
 }
 
 .content-area {
-  margin-left: 70px;
-  width: 67%;
+  margin-left: 33px;
+  width: 63%;
+  padding-left: 100px;
 }
