--- a/src/style.css
+++ b/src/style.css
@@ -351,7 +351,7 @@ h3 {
   font-size: 1em;
   margin-bottom: 0.5em;
   text-align: start;
-  padding: 0px 0px 0px 0px;
+  padding: 0;
 }
 
 #product1 .pro .des span {
